--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
     "prop-types": "15.8.1",
     "storybook": "^8.0.10",
     "webpack": "5.91.0"
-  }
+  },
+  "packageManager": "yarn@4.3.1+sha512.af78262d7d125afbfeed740602ace8c5e4405cd7f4735c08feb327286b2fdb2390fbca01589bfd1f50b1240548b74806767f5a063c94b67e431aabd0d86f7774"
 }
